// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project should adopt the "isOdd" property 1`] = `
<Article>
  <MediaAsset
    imageSource={
      Object {
        "file": Object {
          "contentType": "image/png",
          "details": Object {
            "image": Object {
              "height": 230,
              "width": 345,
            },
            "size": 22495,
          },
          "fileName": "medium-m.png",
          "url": "/medium-m.png",
        },
        "title": "Presentation showing how this project looks on mobile, tablet and desktop screens",
      }
    }
    isOdd={false}
  />
  <ProjectBody>
    <div>
      <ProjectHeader>
        <H3>
          This is the title field for Project 1
        </H3>
      </ProjectHeader>
    </div>
    <P
      textAlign="left"
    >
      This is the description field Project 1
    </P>
    <P
      textAlign="right"
    >
      <FormattedMessage
        defaultMessage="More details →"
        id="portfolio.components.Project.detailsLink"
        values={Object {}}
      />
    </P>
  </ProjectBody>
</Article>
`;

exports[`Project should render and match the snapshot 1`] = `
<Article>
  <MediaAsset
    imageSource={
      Object {
        "file": Object {
          "contentType": "image/png",
          "details": Object {
            "image": Object {
              "height": 230,
              "width": 345,
            },
            "size": 22495,
          },
          "fileName": "medium-m.png",
          "url": "/medium-m.png",
        },
        "title": "Presentation showing how this project looks on mobile, tablet and desktop screens",
      }
    }
    isOdd={true}
  />
  <ProjectBody>
    <div>
      <ProjectHeader>
        <H3>
          This is the title field for Project 1
        </H3>
      </ProjectHeader>
    </div>
    <P
      textAlign="left"
    >
      This is the description field Project 1
    </P>
    <P
      textAlign="right"
    >
      <FormattedMessage
        defaultMessage="More details →"
        id="portfolio.components.Project.detailsLink"
        values={Object {}}
      />
    </P>
  </ProjectBody>
</Article>
`;
